CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(APP_NAME Util)
PROJECT(${APP_NAME})

INCLUDE_DIRECTORIES(
    src
    src/util
    src/util/luaextend)

FILE(GLOB_RECURSE SRCS "./src/*.cpp" "./src/*.c")

ADD_EXECUTABLE(${APP_NAME} ${SRCS})

if (UNIX)
    ADD_DEFINITIONS(-D_PLATFORM_LINUX_)
    TARGET_LINK_LIBRARIES(${APP_NAME} pthread)
elseif (WIN32)
    ADD_DEFINITIONS(-D_PLATFORM_WINDOWS_)
    TARGET_LINK_LIBRARIES(${APP_NAME} ws2_32 Shlwapi)
endif()

