CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(APP_NAME Util)
PROJECT(${APP_NAME})

INCLUDE_DIRECTORIES(
    src)

FILE(GLOB_RECURSE SRCS "./src/*.cpp" "./src/*.c")

ADD_EXECUTABLE(${APP_NAME} ${SRCS})

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	ADD_DEFINITIONS(-D_CPP11_)
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
	ADD_DEFINITIONS(-D_CPP0X_)
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

if (UNIX)
    ADD_DEFINITIONS(-D_PLATFORM_LINUX_)
    TARGET_LINK_LIBRARIES(${APP_NAME} pthread)
elseif (WIN32)
    ADD_DEFINITIONS(-D_PLATFORM_WINDOWS_)
    TARGET_LINK_LIBRARIES(${APP_NAME} ws2_32 Shlwapi)
endif()

#cmake -DCMAKE_BUILD_TYPE=Debug ..

